blue_green/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: backend
              domains:
              - '*'
              routes:
              - match:
                  prefix: /service/1
                  headers:
                  - name: x-canary-version
                    exact_match: green
                response_headers_to_add:
                - header:
                    key: x-canary-version
                    value: green
                route:
                  prefix_rewrite: /
                  cluster: service1_green
              - match:
                  prefix: /service/1
                response_headers_to_add:
                - header:
                    key: x-canary-version
                    value: blue
                route:
                  prefix_rewrite: /
                  cluster: service1_blue
              - match:
                  prefix: /service/2
                route:
                  prefix_rewrite: /
                  weighted_clusters:
                    clusters:
                    - name: service2_blue
                      weight: 80
                      response_headers_to_add:
                      - header:
                          key: x-canary-version
                          value: blue
                    - name: service2_green
                      weight: 20
                      response_headers_to_add:
                      - header:
                          key: x-canary-version
                          value: green
          access_log:
          - name: envoy.access_logers.file
            typed_config:
              '@type': type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: service1_blue
    type: STRICT_DNS
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: service1_blue
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1_blue
                port_value: 80
  - name: service1_green
    type: STRICT_DNS
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: service1_green
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1_green
                port_value: 80
  - name: service2_blue
    type: STRICT_DNS
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: service2_blue
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service2_blue
                port_value: 80
  - name: service2_green
    type: STRICT_DNS
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: service2_green
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service2_green
                port_value: 80
